2003-01-05  Pablo Saratxaga <pablo@mandrakesoft.com>

	* configure.in: Added Amharic (am) and Macedonian (mk) to ALL_LINGUAS

2002-12-30  Jody Goldberg <jody@gnome.org>

	* README : http://bugzilla.gnome.org/show_bug.cgi?id=100916

2002-12-18  Jody Goldberg <jody@gnome.org>

	* configure.in : post release version bump

2002-12-18  Jody Goldberg <jody@gnome.org>

	* Release 2.1.5

2002-12-17  Alex Duggan  <aldug@gnome.org>

	* schemas/desktop_gnome_font_rendering.schemas.in: fixed more typos

2002-12-15  Andrew Sobala  <andrew@sobala.net>

	* schemas/desktop_gnome_font_rendering.schemas.in: fixed typos

2002-12-10  Chema Celorio  <chema@celorio.com>

	* configure.in: remove autoheader warnings, remove acconfig.h

2002-12-10  Dennis Cranston  <dennis_cranston@yahoo.com>
 
	* capplets/accessibility/keyboard/*.desktop.in:
	* capplets/background/*.desktop.in:
	* capplets/default-applications/*.desktop.in:
	* capplets/desktop-links/*.desktop.in:
	* capplets/file-types/*.desktop.in:
	* capplets/font/*.desktop.in:
	* capplets/keybindings/*.desktop.in:
	* capplets/keyboard/*.desktop.in:
	* capplets/mouse/*.desktop.in:
	* capplets/network/*.desktop.in:
	* capplets/sound/*.desktop.in:
	* capplets/theme-switcher/*.desktop.in:
	* capplets/ui-properties/*.desktop.in:
	* capplets/url-properties/*.desktop.in:
	* capplets/windows/*.desktop.in:
	* control-center/*.desktop.in: Add StartupNotify support to 
	the .desktop files.
	
2002-12-09  Jody Goldberg <jody@gnome.org>

	* configure.in (dnl) : bump the gtk req t ohandle havoc's metacity
	  changes.

Wed Dec  4 14:34:27 2002  Jonathan Blandford  <jrb@redhat.com>
 
	* capplets/accessibility/keyboard/*.desktop.in:
	* capplets/background/*.desktop.in:
	* capplets/default-applications/*.desktop.in:
	* capplets/desktop-links/*.desktop.in:
	* capplets/file-types/*.desktop.in:
	* capplets/font/*.desktop.in:
	* capplets/keybindings/*.desktop.in:
	* capplets/keyboard/*.desktop.in:
	* capplets/mouse/*.desktop.in: